tests/miniJava/neg/003822_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { if ( return ) { } else { } } }
